Make "PENALTIES" text shadow more pronounced to improve visibility Fixes #34

--- a/penalties/index.css
+++ b/penalties/index.css
@@ -38,7 +38,6 @@
 .team-name,
 .vs-text,
 #game-clock,
-#penalties-title h1,
 #period-info {
   text-shadow: 1px 1px 2px rgb(0 0 0 / 40%);
 }
@@ -205,6 +204,7 @@ body {
   color: white;
   font-size: 48px;
   margin: 0;
+  text-shadow: 3px 3px 5px rgb(0 0 0 / 40%);
 }
 
 /* ===== ROSTERS AND PENALTIES CONTAINER ===== */
